[gd_scene load_steps=19 format=3 uid="uid://bjlgeaaroug1"]

[ext_resource type="Script" path="res://assets/player/player.gd" id="1_q547c"]
[ext_resource type="AudioStream" uid="uid://qpoakekgt5d0" path="res://assets/player/jump.ogg" id="2_dresy"]
[ext_resource type="Shader" path="res://shaders/psx_geometry.gdshader" id="3_1cee6"]
[ext_resource type="AudioStream" uid="uid://c2nlk0ibysfwt" path="res://sound efects/shot.ogg" id="3_t3mt2"]
[ext_resource type="PackedScene" uid="uid://k234ra6vkxn6" path="res://assets/pause menu/pause_menu.tscn" id="4_nebhs"]
[ext_resource type="Texture2D" uid="uid://de23hn7wiyte3" path="res://assets/player/cross_hair.png" id="5_bqg82"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ppes8"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_kf8x2"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_yggde"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6x7qe"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_y0lr8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b28f5"]
render_priority = 0
shader = ExtResource("3_1cee6")
shader_parameter/albedo_color = Color(0, 0, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_dytkj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e0tk2"]
render_priority = 0
shader = ExtResource("3_1cee6")
shader_parameter/albedo_color = null

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hhcqd"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hcwgw"]
bg_color = Color(0.310617, 0.310617, 0.310617, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.517647, 0.517647, 0.517647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jhbvm"]
bg_color = Color(0.854886, 0, 0.0885779, 1)
border_width_left = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.517647, 0.517647, 0.517647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_32h3e"]
bg_color = Color(0, 0.672717, 0.775671, 1)
border_width_left = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.517184, 0.517184, 0.517184, 1)

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_q547c")

[node name="jumpAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_dresy")
pitch_scale = 2.01

[node name="shootAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_t3mt2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ppes8")

[node name="ShapeCast3DWalls" type="ShapeCast3D" parent="."]
transform = Transform3D(1.01, 0, 0, 0, 0.5, 0, 0, 0, 1.01, 0, 0, 0)
shape = SubResource("CylinderShape3D_kf8x2")
target_position = Vector3(0, 0, 0)

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0)
target_position = Vector3(0, -2, 0)

[node name="ShapeCast3Dceling" type="ShapeCast3D" parent="."]
transform = Transform3D(0.8, 0, 0, 0, 0.3, 0, 0, 0, 0.8, 0, 0.85, 0)
shape = SubResource("CylinderShape3D_yggde")
target_position = Vector3(0, -0.45, 0)

[node name="ShapeCast3Dfloor" type="ShapeCast3D" parent="."]
transform = Transform3D(0.8, 0, 0, 0, 0.3, 0, 0, 0, 0.8, 0, -0.85, 0)
shape = SubResource("CylinderShape3D_6x7qe")
target_position = Vector3(0, 0.45, 0)

[node name="cameraRootY" type="Node3D" parent="."]

[node name="cameraRootX" type="Node3D" parent="cameraRootY"]

[node name="gunBarrel" type="Node3D" parent="cameraRootY/cameraRootX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.366787, -1.17638)

[node name="SpringArm3D" type="SpringArm3D" parent="cameraRootY/cameraRootX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.21941, 0.38279)
spring_length = 4.0
margin = 2.0

[node name="Camera3D" type="Camera3D" parent="cameraRootY/cameraRootX/SpringArm3D"]
fov = 90.0
far = 1000.0

[node name="AudioListener3D" type="AudioListener3D" parent="cameraRootY/cameraRootX/SpringArm3D/Camera3D"]

[node name="aimRay" type="RayCast3D" parent="cameraRootY/cameraRootX/SpringArm3D/Camera3D"]
target_position = Vector3(0, 0, -100)

[node name="displayModel" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="displayModel"]
mesh = SubResource("CapsuleMesh_y0lr8")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_b28f5")

[node name="MeshInstance3D" type="MeshInstance3D" parent="displayModel/MeshInstance3D"]
transform = Transform3D(0.1, 0, 0, 0, 0.2, 0, 0, 0, 0.1, 0.25, 0.5, -0.4)
mesh = SubResource("SphereMesh_dytkj")
surface_material_override/0 = SubResource("ShaderMaterial_e0tk2")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="displayModel/MeshInstance3D"]
transform = Transform3D(0.1, 0, 0, 0, 0.2, 0, 0, 0, 0.1, -0.25, 0.5, -0.4)
mesh = SubResource("SphereMesh_dytkj")
surface_material_override/0 = SubResource("StandardMaterial3D_hhcqd")

[node name="ledgeRayZ" type="RayCast3D" parent="displayModel"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.0507506, 0.773067, -0.386575)

[node name="ledgeRayY" type="RayCast3D" parent="displayModel/ledgeRayZ"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.285143, -0.302066)

[node name="PauseMenu" parent="." instance=ExtResource("4_nebhs")]
visible = false

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 647.0

[node name="ProgressBar" type="ProgressBar" parent="HUD"]
layout_mode = 2
offset_top = 472.0
offset_right = 40.0
offset_bottom = 648.0
theme_override_styles/background = SubResource("StyleBoxFlat_hcwgw")
theme_override_styles/fill = SubResource("StyleBoxFlat_jhbvm")
value = 50.0
fill_mode = 3
show_percentage = false

[node name="ProgressBar2" type="ProgressBar" parent="HUD"]
layout_mode = 2
offset_left = 40.0
offset_top = 472.0
offset_right = 60.0
offset_bottom = 648.0
theme_override_styles/background = SubResource("StyleBoxFlat_hcwgw")
theme_override_styles/fill = SubResource("StyleBoxFlat_32h3e")
value = 50.0
fill_mode = 3
show_percentage = false

[node name="aim" type="TextureRect" parent="HUD"]
layout_mode = 2
offset_left = 560.0
offset_top = 307.0
offset_right = 592.0
offset_bottom = 339.0
texture = ExtResource("5_bqg82")
